--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -562,4 +562,28 @@ thead tr th:nth-of-type(4) {
 }
 
 
+.purposesect{
+    padding-top: 5px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content:space-around;
+    gap: 10px;
+    text-align: center;
+}
+.purposesect img{
+    border: 4px outset wheat;
+    border-radius: 5px;
+}
+.purposesect img:nth-of-type(1) {
+    grid-column: 1;
+    width: 100%;
+}
 
+.purposesect img:nth-of-type(2) {
+    grid-column: 2;
+    width: 100%;
+}
+.purposesect img:nth-of-type(3) {
+    grid-column: 3;
+    width: 100%;
+}
