--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -577,13 +577,16 @@ thead tr th:nth-of-type(4) {
 .purposesect img:nth-of-type(1) {
     grid-column: 1;
     width: 100%;
+    height: 80%;
 }
 
 .purposesect img:nth-of-type(2) {
     grid-column: 2;
     width: 100%;
+    height: 80%;
 }
 .purposesect img:nth-of-type(3) {
     grid-column: 3;
     width: 100%;
+    height: 80%;
 }
