--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -529,6 +529,7 @@ thead tr th:nth-of-type(4) {
 .f_act{
     display: flex;
     justify-content: space-between;
+    border: 1px ridge wheat;
 }
 .f_act form{
     padding-left: 10px;
@@ -563,30 +564,31 @@ thead tr th:nth-of-type(4) {
 
 
 .purposesect{
-    padding-top: 5px;
+    border: 1px ridge wheat;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: grid;
     grid-template-columns: auto auto auto;
-    justify-content:space-around;
-    gap: 10px;
+    justify-content:center;
+    gap: 15px;
     text-align: center;
 }
 .purposesect img{
     border: 4px outset wheat;
     border-radius: 5px;
+    width: 250px;
+    height: 150px;
+
 }
 .purposesect img:nth-of-type(1) {
+
     grid-column: 1;
-    width: 100%;
-    height: 80%;
 }
 
 .purposesect img:nth-of-type(2) {
     grid-column: 2;
-    width: 100%;
-    height: 80%;
 }
 .purposesect img:nth-of-type(3) {
     grid-column: 3;
-    width: 100%;
-    height: 80%;
+
 }
