--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -565,30 +565,48 @@ thead tr th:nth-of-type(4) {
 
 .purposesect{
     border: 1px ridge wheat;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /* padding:20px; */
     display: grid;
     grid-template-columns: auto auto auto;
-    justify-content:center;
-    gap: 15px;
     text-align: center;
+
 }
-.purposesect img{
+
+
+/* }
+.purposesect img:nth-of-type(1) {
+    grid-row: 2;
+    grid-column: 1/3;
+}
+
+.purposesect img:nth-of-type(2) {
+    grid-row: 2;
+    grid-column: 3/4;
+}
+.purposesect img:nth-of-type(3) {
+    grid-row: 2;
+    grid-column: 4/5;
+
+} */
+.purposesect div:nth-of-type(1)  {
+    grid-row: 1;
+    grid-column: 1/4;
+    text-align: justify; 
+    padding: 15px;
+}
+.purposesect div:nth-of-type(2)  {
+    grid-row: 2;
+    grid-column: 1/4;
+}
+
+
+.f_alig{
+    display: flex;
+    justify-content:space-around;
+}
+.f_alig img{
     border: 4px outset wheat;
     border-radius: 5px;
     width: 250px;
     height: 150px;
-
-}
-.purposesect img:nth-of-type(1) {
-
-    grid-column: 1;
-}
-
-.purposesect img:nth-of-type(2) {
-    grid-column: 2;
-}
-.purposesect img:nth-of-type(3) {
-    grid-column: 3;
-
 }
