--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -530,8 +530,9 @@ thead tr th:nth-of-type(4) {
     display: flex;
     justify-content: space-between;
     border: 1px ridge wheat;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 20px;
 }
 .f_act form{
@@ -574,23 +575,6 @@ thead tr th:nth-of-type(4) {
     text-align: center;
 
 }
-
-
-/* }
-.purposesect img:nth-of-type(1) {
-    grid-row: 2;
-    grid-column: 1/3;
-}
-
-.purposesect img:nth-of-type(2) {
-    grid-row: 2;
-    grid-column: 3/4;
-}
-.purposesect img:nth-of-type(3) {
-    grid-row: 2;
-    grid-column: 4/5;
-
-} */
 .purposesect div:nth-of-type(1)  {
     grid-row: 1;
     grid-column: 1/4;
