modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -35,7 +35,7 @@
 body {
     padding-left: 7px;
     padding-bottom: 10px;
-    width: 860px;
+    width: 1024px;
     color: var(--primary-color);
 }
 
@@ -356,7 +356,7 @@ footer nav img{
 }
 .part2{
     padding: 1px;
-    max-width: 849px;
+    width:100%;
 }
 .alternativegrid{
     display: grid;
