--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,9 +33,9 @@
 } 
 
 body {
-    padding-left: 7px;
+    padding-left: 10px;
     padding-bottom: 10px;
-    padding-right: 7px;
+    padding-right: 10px;
     width: 100%;
     color: var(--primary-color);
 }
@@ -79,10 +79,11 @@ img.special{
 }
 .m_d_h2{
     position:absolute;
-    top: 25px;
+    top: 60px;
     color: white;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 300%;
 }
 
 main div article{
@@ -116,7 +117,7 @@ main section h2{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center; 
-    padding-left: 10px;
+    /* padding-left: 10px; */
 }
 /* Formating navigation component */
 .comp_nav{
@@ -125,7 +126,7 @@ main section h2{
     display:flex;
     width:auto; 
     border: 2px solid;
-    grid-column: 4;
+    grid-column: 5;
 
 }
 
@@ -362,7 +363,6 @@ footer nav img{
 .part2{
     padding: 1px;
     width:100%;
-    height: 320px;
 }
 .alternativegrid{
     display: grid;
@@ -458,21 +458,22 @@ footer nav img{
 }
 
 .second_element{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin: 25px;
     display: grid;
-    gap: 2px;
     text-align: center;
     grid-template-columns: 1fr 1fr 1fr;
 }
 .sec_elem_img{
-    width: 240px;
-    height: 180px;
-    border: 2px ridge black;
+    grid-row: 1;
+    max-width: 410px;
+    width: 100%;
+    height: 95%;
+    border: 5px ridge black;
 }
 .offer_text{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 14%;
+    padding-right: 14%;
+    padding-bottom: 20px;
     text-align: justify;
     font-size:small;
 }
@@ -569,17 +570,22 @@ thead tr th:nth-of-type(4) {
     display: grid;
     grid-template-columns: auto auto auto;
     text-align: center;
+    padding-bottom: 5px;
 
 }
 .purposesect div:nth-of-type(1)  {
     grid-row: 1;
     grid-column: 1/4;
     text-align: justify; 
-    padding: 15px;
+    margin-top: 1%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 15px;
 }
 .purposesect div:nth-of-type(2)  {
     grid-row: 2;
     grid-column: 1/4;
+
 }
 
 
@@ -590,6 +596,6 @@ thead tr th:nth-of-type(4) {
 .f_alig img{
     border: 4px outset wheat;
     border-radius: 5px;
-    width: 250px;
-    height: 150px;
+    width: 25%;
+
 }
