--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -42,7 +42,7 @@ body {
 
 main{
     background-color: var(--general-background-color);
-    border: 2px ridge;
+    border: 1px ridge;
 }  
 
 h1, h2, h3, h4, h5, h6 {
@@ -359,6 +359,7 @@ footer nav img{
     position: relative;
     align-self:center ;
     justify-content:space-between;
+    border: 1px ridge wheat;
 }
 .part2{
     padding: 1px;
@@ -578,25 +579,22 @@ thead tr th:nth-of-type(4) {
     grid-column: 1/4;
     text-align: justify; 
     margin-top: 1%;
-    margin-left: 4%;
-    margin-right: 4%;
-    margin-bottom: 15px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 10px; 
 }
 .purposesect div:nth-of-type(2)  {
     grid-row: 2;
     grid-column: 1/4;
-
 }
-
 
 .f_alig{
     display: flex;
     justify-content:space-around;
+    align-items:center;
 }
 .f_alig img{
     border: 4px outset wheat;
     border-radius: 5px;
-    width: 25%;
-    height: 85%;
-
+    width: 89%;
 }
